--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@clerk/clerk-js": "^5.43.3",
     "@clerk/clerk-sdk-node": "^5.1.4",
     "app": "^0.1.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "chart.js": "^4.4.0",
