--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,7 @@ DB_PASSWORD=
 DB_NAME=pro
 JWT_SECRET=supersecretkey
 PORT=3001
+GOOGLE_CLIENT_ID=749850875501-r63q0p3drokbbr4mgr7vrdvmv3i0euik.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:3001/api/auth/google/callback
+JWT_SECRET=your_jwt_secret
